tests/ast_interpreter/err_type_binary.expected
<string>:1:3: error: binary operator Add cannot be applied to Int and Null
5 + null
  ^